--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 logo: https://i.imgur.com/bLbZ9zr.jpg
 title: CIS-201 Portfolio
 description: Ramyond Laughrey, VVC CIS Fall '18
+show_downloads: true
