--- a/6 Vectors/makefile
+++ b/6 Vectors/makefile
@@ -4,7 +4,7 @@ all: main
 
 main : main.cpp
 	@echo "Making the executable -- some warnings can be safely ignored"
-	@g++ -o main *.cpp
+	@g++ -o main *.cpp -std=c++11
 
 run : main
 	@echo "Running the program:"
